Add unit tests for new services